# lorewyld

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  typeshare.toml
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: main.rs  settings.rs
dnd5e_data_model/: README.md
docs/: ARCHITECTURE.md  DATA_MODEL.md  LOCAL_DEVELOPMENT.md
docs/decisions/: 001-database-choice.md
mobile/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
mobile-ffi/: Cargo.toml
mobile-ffi/src/: frb_generated.rs  lib.rs
mobile-ffi/src/api/: sheet.rs
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/lorewyld/: MainActivity.kt
mobile/assets/content/: srd-bundle.json  srd-bundle.meta.json
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: home_screen.dart  main.dart
mobile/lib/compendium/: categories.dart  filters.dart
mobile/lib/dice/: dice_icon.dart  dice_roller_screen.dart  dice_type.dart
mobile/lib/ffi/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
mobile/lib/ffi/api/: sheet.dart
mobile/lib/screens/: character_create_wizard_screen.dart  character_list_screen.dart  character_notes_screen.dart  character_sheet_screen.dart  compendium_screen.dart  lore_note_edit_screen.dart  module_management_screen.dart  modules_browse_screen.dart  promote_module_wizard_screen.dart  search_screen.dart  server_connect_screen.dart  server_screen.dart  setting_detail_screen.dart  setting_list_screen.dart
mobile/lib/services/: api_client.dart  content_store.dart  local_store.dart  server_connection.dart  sync_service.dart
mobile/lib/types/: api_v1.dart  app_user.dart  bundled_module.dart  character.dart  content_module.dart  lore_note.dart  setting.dart  tag.dart  user.dart
mobile/lib/util/: uuid.dart
mobile/lib/widgets/: async_list_view.dart  content_picker.dart  filter_sheet.dart  lorewyld_app_bar.dart  lorewyld_shell.dart  markdown_editor.dart  source_badge.dart
mobile/linux/: CMakeLists.txt
mobile/linux/flutter/: generated_plugins.cmake
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/rust_builder/: pubspec.yaml
mobile/rust_builder/android/: build.gradle  settings.gradle
mobile/rust_builder/android/src/main/: AndroidManifest.xml
mobile/rust_builder/ios/: lorewyld_mobile_ffi.podspec
mobile/rust_builder/linux/: CMakeLists.txt
mobile/rust_builder/macos/: lorewyld_mobile_ffi.podspec
mobile/rust_builder/windows/: CMakeLists.txt
mobile/test/: character_test.dart  content_filters_test.dart  content_store_test.dart  dice_roll_test.dart  flutter_test_config.dart  local_store_test.dart  sync_e2e_test.dart  widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/flutter/: generated_plugins.cmake
mobile/windows/runner/: Runner.rc  main.cpp
scripts/: regen-ffi.sh  regen-types.sh  regen-wasm.sh  run-backend.sh  run-mobile.sh  setup-dev.sh
server/: Cargo.toml  config.toml  rust-toolchain.toml
server/assets/: lw-content.js  style.css
server/assets/wasm/: lorewyld_domain.d.ts  lorewyld_domain.js  lorewyld_domain_bg.wasm  lorewyld_domain_bg.wasm.d.ts  package.json
server/migrations/: 20260111000001_setup.down.sql  20260111000001_setup.up.sql  20260601000001_lore_authoring.down.sql  20260601000001_lore_authoring.up.sql  20260611000001_srd_content.down.sql  20260611000001_srd_content.up.sql  20260612000001_characters_and_module_origin.down.sql  20260612000001_characters_and_module_origin.up.sql  20260614000001_spell_summary.down.sql  20260614000001_spell_summary.up.sql
server/src/: content.rs  lib.rs  main.rs  settings.rs
server/src/api/: admin.rs  admin_modules.rs  auth.rs  characters.rs  compendium.rs  error.rs  lore_notes.rs  mod.rs  modules.rs  openapi.rs  rows.rs  search.rs  server_info.rs  settings.rs  tags.rs
server/src/web/: app.rs  auth_ui.rs  breadcrumbs.rs  characters.rs  compendium.rs  home.rs  lore.rs  mod.rs  modules.rs  nav.rs  roll.rs  search.rs  settings_server.rs  settings_users.rs
server/tests/: characters_api.rs  module_lifecycle.rs  seed_content.rs
shared/domain/: Cargo.toml
shared/domain-wasm/: Cargo.toml
shared/domain-wasm/src/: lib.rs
shared/domain/src/: lib.rs  sheet.rs
shared/schemas/: game_server.json  user.json
shared/types/: Cargo.toml
shared/types/src/: api_v1.rs  app_user.rs  background.rs  bundle.rs  character.rs  character_feature.rs  class.rs  common.rs  condition.rs  content_module.rs  creature.rs  document.rs  enchantment.rs  equipment.rs  feat.rs  item.rs  language.rs  lib.rs  lore_note.rs  magic_item.rs  monster.rs  plane.rs  race.rs  setting.rs  species.rs  spell.rs  tag.rs  user.rs  version.rs
tools/bundle-gen/: Cargo.toml  README.md
tools/bundle-gen/data/: overrides.json
tools/bundle-gen/src/: dedup.rs  fetch.rs  main.rs  map.rs  v1.rs  v2.rs
