[workspace]
# mobile-ffi is intentionally OUT of default-members: it builds a
# cdylib/staticlib for iOS/Android and is compiled by flutter_rust_bridge's
# cargokit during the Flutter build, not by a host `cargo build`.
members = ["server", "shared/types", "shared/domain", "mobile-ffi", "tools/bundle-gen"]
default-members = ["server", "shared/types", "shared/domain"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }

[profile.release]
debug = true
codegen-units = 1
lto = true
