[package]
name = "lorewyld"
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.leptos]
output-name = "lorewyld"
env = "DEV"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
lorewyld-types = { path = "../shared/types" }
axum = { version = "0.8", features = ["macros", "query"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
rand = "0.9"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
triggered = "0.1"
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_router = { version = "0.8", features = ["ssr"] }
leptos_meta = { version = "0.8", features = ["ssr"] }
tower-http = { version = "0.6", features = ["fs"] }
argon2 = "0.5"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
