[package]
name = "lorewyld-domain"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Pure 5e rules logic (sheet math, validation) shared by the server, web, and mobile clients"

[dependencies]
lorewyld-types = { path = "../types" }
serde.workspace = true

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
