[package]
name = "lorewyld-types"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Shared schema types for the Lorewyld server, web UI, and mobile clients"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
