[package]
name = "bundle-gen"
description = "Generates the shipped SRD content bundle from the Open5e API"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
lorewyld-types = { path = "../../shared/types" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
